fix padding/spacing/alignment

--- a/client/refract.less
+++ b/client/refract.less
@@ -139,6 +139,22 @@ lead {
   color: black;
 }
 
+#canvasWrapper {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#canvascontainer {
+  display: block;
+}
+
+#specsCanvas {
+  display: block;
+  margin: 0 auto;
+}
+
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
 .btn-label {position: relative;left: -12px;display: inline-block;padding: 6px 12px;background: rgba(0,0,0,0.15);border-radius: 3px 0 0 3px;}
